#4, Closes #12: As suspected, the mangling issue was related to the encoding of the upload process. Simply changing FileReader to use ISO-8859-1 completely fixed the issue downstream from that point. While UnifrakturCook did have support for Latin-1, the default font was changed to Chomsky for testing purposes; it still has a Blackletter appearance, but seems a bit more legible.

--- a/app/javascript/src/styles.css
+++ b/app/javascript/src/styles.css
@@ -21,10 +21,13 @@ body {
 
   background-attachment: fixed;
 
-  font-family: 'UnifrakturCook', cursive;
+  font-family: 'ChomskyRegular', cursive;
+  font-style: normal;
+  font-weight: normal;
 
   font-size: 24px;
   font-size: calc( 1vw + 1vh + .5vmin );
+  line-height: 1.1;
 
   width: 100%;
   height: 100%;
